--- a/index.html
+++ b/index.html
@@ -14,28 +14,27 @@
       <div class="container-fluid">
         <div class="row row1">
           <div class="col-md-12">
-            <h1 class="display-1 text-center">ping-pong</h1>
+            <h1 class="display-1 text-center"><strong>Ping-Pong</strong></h1>
 
           </div>
 
         </div>
         <div class="row section1">
           <div class="col-md-3 about">
-            <h4>about ping pong</h4>
-            <h3>created by:</h3>
-            Emmanuel Mulatya <br>
-            <h3>github username/url:</h3>
-            mulatya <br>
-            <h3>level 2 test for:</h3>
-            JavaScript
-
+            <h3><strong>About Ping-Pong</strong></h3>
+            <h4 class="beige">created by:</h4>
+            <h5>  Emmanuel Mulatya</h5>
+            <h4 class="beige">Github username/url:</h4>
+            <h5><a href="https://github.com/mulatya">mulatya</a></h5>
+            <h4 class="beige">level 2 test for:</h4>
+            <h5>JavaScript</h5>
           </div>
           <div class="col-md-7 col-md-offset-1">
             <div id="main">
-              <h2>let's play</h2>
-              <h3>Rules</h3>
+              <h2>Let's play</h2>
+              <h3>Rules:</h3>
               <p>
-                ping pong will count your number from 1 with exception from the following:
+                Ping Pong will count your number from 1 with exception from the following:
                 <ol>
                   <li>number divisible by 3 become "ping"</li>
                   <li>number divisible by 5 become "pong"</li>
